Added API endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ScoreboardDB
 spring.datasource.name=scoreboardDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres1
+
+logging.level.=ERROR
+logging.level.org.springframework.jdbc.core.JdbcTemplate=FALSE
